sone js buttons added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <body>
     <!-- im about to create a table -->
     <table>
+      <caption>
+        Vhathu Vha We Hlungwani
+      </caption>
       <tr>
         <th>Name</th>
         <th>Surname</th>
@@ -32,5 +35,18 @@
         <td>Hlungwani</td>
       </tr>
     </table>
+    <!-- word & description-->
+    <dl>
+      <dt id="term1">term</dt>
+      <dd>description</dd>
+      <dt id="term2">term2</dt>
+      <dd>description2</dd>
+      <dt id="term3">term3</dt>
+      <dd>description3</dd>
+    </dl>
+    <!-- some javascription-->
+    <button onclick="changeTerm1()">Term 1 change</button>
+    <button onclick="changeTerm2()">Term 2 change</button>
+    <button onclick="changeTerm3()">Term 3 change</button>
   </body>
 </html>
