--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </pre>
     <samp>file not found</samp>
     <!--a form -->
-    <form action="#">
+    <form action="#" autocomplete="on">
       <label for="names">Names: </label>
       <input type="text" id="names" placeholder="Amukelani Lyborn" /><br />
       <label for="surname">Surname: </label>
@@ -89,5 +89,12 @@
         <option value="30000">30000</option>
       </select>
     </form>
+    <video controls autoplay>
+      <source
+        src="https://youtu.be/QriKqNbon58?si=PnKLSvnGT-EmkO9f"
+        type="video/mp4"
+      />
+      <samp>browser doesnt support videos</samp>
+    </video>
   </body>
 </html>
